# ZenithSearch

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: CLI.md
src/: main.cpp
src/cli/: ArgParser.cpp  ArgParser.hpp
src/core/: Expected.hpp  Interfaces.hpp  NaiveSearchAlgorithm.cpp  NaiveSearchAlgorithm.hpp  SearchEngine.cpp  SearchEngine.hpp  TextUtils.hpp  Types.hpp
src/platform/: Glob.hpp  MappedFileProvider.hpp  OutputWriters.cpp  OutputWriters.hpp  StdFileReader.cpp  StdFileReader.hpp  StdFilesystemEnumerator.cpp  StdFilesystemEnumerator.hpp
src/platform/posix/: MappedFilePosix.cpp
src/platform/windows/: MappedFileWin.cpp
tests/: doctest.h  test_arg_parser.cpp  test_exit_codes.cpp  test_filesystem.cpp  test_filters.cpp  test_golden.cpp  test_main.cpp  test_mmap.cpp  test_output.cpp  test_parallel.cpp  test_search.cpp
